--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,17 @@ body {
     background:lavender;
     font-family:Arial, Helvetica, sans-serif;
 }
+
+.assignment{
+    display: flex;
+    padding:10px;
+    margin:10px;
+    background: lightgray;
+}
+.assignment img{
+    width: 200px;
+    padding:10px;
+}
 h1{
     color:darkslateblue;
     text-align:center;
