--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,13 @@ body {
     font-family:Arial, Helvetica, sans-serif;
 }
 
-.assignmnts {
+.assignments {
     display:flex;
     flex-wrap:wrap;
 }
 .assignment {
     width:22%;
-    padding:10px;
+    padding:20px;
     margin:10px;
     padding: 20px 10px;
     background: lightgray;
