--- a/style.css
+++ b/style.css
@@ -334,6 +334,14 @@ section {
     flex-wrap: wrap;
     flex-direction: row;
     gap: 2.5rem;
+    justify-content: space-around;
+  }
+  .article-container-experience {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
     justify-content: flex-start;
   }
   
