--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ section {
     display: flex;
     justify-content: center;
     gap:1rem;
+    
 }
 
 .btn {
@@ -290,7 +291,6 @@ section {
 
 .details-container{
     padding: 1.5rem;
-    flex: 1;
     background: white;
     border-radius: 2rem;
     border: rgb(53,53,53) 0.1rem solid;
@@ -374,8 +374,17 @@ section {
   
   .project-img {
     border-radius: 2rem;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%; /* Set a fixed height */
+    object-fit: cover; /* Ensures the image scales properly without distortion */
+    max-width: 300px;
+    max-height: 300px;
+  }
+
+  .project-basketball-img {
+    border-radius: 2rem;
+    width: 200px;
+    height: 200px;
   }
   
   .project-title {
